--- a/member_server.yml
+++ b/member_server.yml
@@ -3,7 +3,7 @@
   hosts: member_servers
 
   roles:
-    # - { role: common }
+    - { role: common }
 
   tasks:
   - name: Configure DNS Server
@@ -12,25 +12,6 @@
       ipv4_addresses:
       - 192.168.100.10
 
-  - name: Debug
-    debug: var=inventory_hostname
-
-  - name: Change hostname to match inventory
-    win_domain_membership:
-      hostname: "{{ inventory_hostname }}"
-      domain_admin_user: "{{ ansible_user }}"
-      domain_admin_password: "{{ ansible_password }}"
-      workgroup_name: WORKGROUP
-      state: workgroup
-    register: name_state
-
-  - name: Reboot to complete name change
-    when: name_state.changed
-    win_reboot:
-      shutdown_timeout: 600
-      reboot_timeout: 600
-      post_boot_delay: 120
-
   - name: Verify server is a member of CONTOSO.com
     win_domain_membership:
       hostname: "{{ inventory_hostname }}"
@@ -38,7 +19,6 @@
       domain_admin_user: test_admin@CONTOSO.com
       domain_admin_password: "AutomationDoesW0rk!"
       state: domain
-      domain_ou_path: CN=Computers,DC=CONTOSO,DC=com
     register: domain_state
 
   - name: Reboot to complete joining domain
@@ -53,3 +33,17 @@
       name: File-Services, FS-FileServer
       state: present
       include_management_tools: True
+
+  - name: Ensure directory structure for public share exists
+    win_file:
+      path: C:\shares\public
+      state: directory
+
+  - name: Ensure public share exists
+    win_share:
+      name: public
+      description: Basic RW share for all domain users
+      path: C:\shares\public
+      list: yes
+      full: Administrators
+      change: Users
